--- a/lib/template.html
+++ b/lib/template.html
@@ -62,7 +62,7 @@
 {% endif %}
 
 {% if site.metadata.twitter %}
-  <meta name="twitter:site" content="@{{ site.metadata.twitter.username | remove:'@' }}" />
+  <meta name="twitter:site" content="@{{ site.metadata.twitter.username | default: site.metadata.twitter | remove:'@' }}" />
 
   {% if seo_tag.author.twitter %}
     <meta name="twitter:creator" content="@{{ seo_tag.author.twitter | remove:'@' }}" />
